# resolvekit

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  data-releases.md  pyproject.toml  pyrightconfig.json  zensical.toml
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: benchmark.yml  docs.yml  publish.yml  release-data.yml  test.yml
benchmarks/: README.md  __init__.py  __main__.py  eval_gate.json  parse_eval_gate.json
benchmarks/core/: _math.py  engine.py  kernel.py  loader.py  metricresults.py  metrics.py  profile.py  report.py  toolspec.py
benchmarks/data/: ATTRIBUTION.md  ambiguous.parquet  eval_geo.csv  eval_geo.parquet  eval_org.csv  eval_org.parquet  eval_parse.csv  eval_parse.parquet  geo_admin.parquet  geo_cities.parquet  geo_countries_en.parquet  geo_countries_multilingual.parquet  no_match.parquet  provenance.json
benchmarks/parse/: __init__.py  __main__.py  loader.py  metrics.py  runner.py
benchmarks/results/: latest.json  latest.md  parse_baselines.json
benchmarks/tools/: __init__.py  _util.py  country_converter.py  countryguess.py  data_commons.py  geonamescache.py  hdx.py  jsoncache.py  protocol.py  pycountry.py  rapidfuzz_dict.py  resolvekit.py  ror.py
docs/: index.md  roadmap.md
docs/explanation/: confidence.md  entities-and-modules.md  how-resolution-works.md  knowledge-graph.md  offline-and-data-packs.md
docs/getting-started/: first-resolution.md  install.md
docs/how-to/: bring-your-own-data.md  build-typeahead-autocomplete.md  clean-a-dataframe-column.md  convert-between-code-systems.md  extract-entities-from-text.md  extract-entities-with-your-own-ner.md  handle-ambiguous-matches.md  list-entities-in-a-region.md  reconcile-a-column-with-review.md  refine-resolution-with-context.md  resolve-group-membership.md  work-offline-and-manage-data-packs.md
docs/reference/: advanced.md  api.md  resolver.md
scripts/benchmark/: benchmark_autocomplete.py  benchmark_common.py  benchmark_resolver.py  check_autocomplete_eval_gate.py  check_eval_gate.py  check_gold_liveness.py  check_parse_eval_gate.py  measure_warm_memory.py  profile_resolver.py  run_parse_baselines.py
scripts/calibrate/: calibrate_common.py  calibrate_countries_only.py  calibrate_geo.py  train_geo_model.py
scripts/data_maintenance/: _common.py  convert_eval_csv.py  prune_run_intermediates.py  refresh_group_members.py  refresh_oecd_dac.py
scripts/release/: _common.py  release_data.py  sync_manifest.py  verify_bundled_data.py
src/resolvekit/: NOTICE.md  __init__.py  _convenience.py  _pandas_integration.py  _polars_integration.py  extensions.py
tests/: README.md  conftest.py  test_ambiguous_error_hints.py  test_benchmark_autocomplete.py  test_benchmark_resolver.py  test_bulk_code_input.py  test_bulk_crosswalk.py  test_bulk_dict_input.py  test_bulk_dispatch.py  test_bulk_output_shape.py  test_bulk_param_validation.py  test_bulk_review_roundtrip.py  test_collapse_resolve_to.py  test_crosswalk.py  test_datapack_compat.py  test_diagnostics_namespace.py  test_disambiguation_repr.py  test_entity_attributes.py  test_error_ux.py  test_fork_safety.py  test_geo_benchmark_guard.py  test_geo_integration.py  test_html_repr_scoping.py  test_inspection_html.py  test_integration.py  test_iso_numeric_regressions.py  test_model_copy_preserves_private.py  test_module_bulk_smoke.py  test_modules_api.py  test_multipack_integration.py  test_numeric_coercion.py  test_org_integration.py  test_pandas_accessor.py  test_polars_accessor.py  test_prominence_coverage_guard.py  test_public_api.py  test_resolution_result_proxy.py  test_resolve_id.py  test_resolve_to_pivot_consistency.py  test_resolver_alloc.py  (+12 more)
tests/api/: test_augment_compose.py  test_bulk_default_output.py  test_bulk_missing_target_code.py  test_cache_no_mutation_leak.py  test_collaborators.py  test_configure_default_output.py  test_default_output_backcompat.py  test_group_preference_tiebreak.py  test_members_of.py  test_members_of_as_codes.py  test_no_reachins.py  test_output_spec.py  test_output_view.py  test_per_call_name_grammar.py  test_related.py  test_resolve_default_output.py  test_resolve_detailed.py  test_within.py
tests/benchmarks/: bench_bulk_per_row_context.py  test_build_cldr.py  test_build_geonames.py  test_build_spec.py  test_build_synthetic.py  test_build_wikidata.py  test_convert_eval_csv.py  test_country_contamination_guard.py  test_engine_scoping.py  test_eval_curation.py  test_eval_gate.py  test_math.py  test_metrics.py  test_parse_eval_gate.py  test_report.py  test_runner_skips.py  test_synthetic_en_purity.py
tests/builder/: test_api.py  test_apply_name_rows.py  test_build_report_compat.py  test_calibrator_packaging.py  test_canonical_staging_db.py  test_capability_protocols.py  test_containment.py  test_containment_prominence.py  test_continents_seed.py  test_contribution.py  test_datapack_layout.py  test_dc_un_regions.py  test_enrich_fts_ordering.py  test_entity_validity.py  test_formal_names.py  test_geo_shared.py  test_geo_shared_manifest_compat.py  test_groups_loader.py  test_module_catalog.py  test_oecd_dac.py  test_oecd_dac_refresh.py  test_prominence_contribution.py  test_prominence_fetcher.py  test_prune_run_intermediates.py  test_region_filter_unit.py  test_reviewer_fixes.py  test_verify_bundled_data.py
tests/building/: __init__.py  test_adapter_injection.py  test_api_pipeline.py  test_build_options.py  test_datacommons_canonicalize.py  test_datacommons_client.py  test_datacommons_geo_dc_api.py  test_datacommons_geo_discovery.py  test_datacommons_geo_fetch.py  test_datacommons_geo_source.py  test_datacommons_org_source.py  test_datacommons_shared.py  test_diff_ops.py  test_enrich_stage.py  test_geo_shared.py  test_presets.py  test_registry.py  test_sqlite_ops.py  test_state_store.py  test_wikidata_aliases.py
tests/byod/: test_overlay_unique_ids.py
tests/calibrate/: test_calibrate_common.py
tests/calibration/: test_adapters.py  test_adapters_characterization.py  test_calibrate_common.py  test_dataset.py  (+11 more)
(+498 files in other folders)
